--- a/eam/application_c1.yml
+++ b/eam/application_c1.yml
@@ -5,7 +5,7 @@ server:
     session:
       # 会话超时时间，如 30s , 20m 等
       timeout: 1200s
-  port: 26788
+  port: 8080
 
 spring:
   main:
@@ -36,9 +36,9 @@ spring:
             linux: /foxnic/passwd.txt
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://127.0.0.1:3306/eam?useSSL=false&serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowPublicKeyRetrieval=true&tinyInt1isBit=false
-        username: root
-        password: root_pwd
-        # 启动程序时，在连接池中初始化多少个连接
+        #url: jdbc:mysql://127.0.0.1:3306/eam_demo?useSSL=false&serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowPublicKeyRetrieval=true&tinyInt1isBit=false
+        username: eam
+        password: P@sswOracle123456
         initialSize: 16
         # 连接池中最多支持多少个活动会话
         maxActive: 128
@@ -92,7 +92,7 @@ spring:
 foxnic:
   config:
     # 按顺序读取 profile 下的配置值，默认使用 default Profile 的配置值，如果位于靠前的 profile 已经有配置，则不再往后读取，即前面 profile 的覆盖后面的 profile ;
-    profiles: empty,default
+    profiles: empty,profile@GuoYIE
   # 设置 Join 的二级缓存
   cache:
     # 默认配置
@@ -198,7 +198,7 @@ storage:
       #在不同的环境下选择不同的路径
       windows: c:/uploads
       mac: /opt/upload
-      linux: /opt/eam/upload
+      linux: /home/eam/eam/upload
 
 develop:
   language: defaults
