--- a/eam/common/framework/pom.xml
+++ b/eam/common/framework/pom.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
-    <modelVersion>4.0.0</modelVersion>  
-    <parent> 
-        <groupId>com.dt.platform</groupId>  
-    	<artifactId>parent</artifactId>  
-        <version>0.0.2.RELEASE</version>  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dt.platform</groupId>
+    	<artifactId>parent</artifactId>
+        <version>0.0.2.RELEASE</version>
         <relativePath>../../pom.xml</relativePath>
-        <!-- lookup parent from repository --> 
-    </parent>  
+        <!-- lookup parent from repository -->
+    </parent>
     <artifactId>framework</artifactId>
     <name>framework</name>
     <description>framework-eam</description>
-    <packaging>jar</packaging>  
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>com.github.foxnic</groupId>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.11</version>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
@@ -87,5 +87,5 @@
 <!--            <version>2.6.0</version>-->
 <!--        </dependency>-->
 
-    </dependencies> 
+    </dependencies>
 </project>
