--- a/eam/pom.xml
+++ b/eam/pom.xml
@@ -27,6 +27,7 @@
 		<platform.version>0.0.2.RELEASE</platform.version>
 		<foxnic.version>1.4.5.RELEASE</foxnic.version>
 		<foxnic-web.version>0.6.5.RELEASE</foxnic-web.version>
+		<mysql.version>8.0.27</mysql.version>
 	</properties>
 
 
