版本升级以及任务调度

--- a/eam/pom.xml
+++ b/eam/pom.xml
@@ -25,8 +25,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<knife4j.version>3.0.2</knife4j.version>
 		<platform.version>0.0.2.RELEASE</platform.version>
-		<foxnic.version>1.4.5.RELEASE</foxnic.version>
-		<foxnic-web.version>0.6.5.RELEASE</foxnic-web.version>
+		<foxnic.version>1.4.6.RELEASE</foxnic.version>
+		<foxnic-web.version>0.7.0.RELEASE</foxnic-web.version>
 		<mysql.version>8.0.27</mysql.version>
 	</properties>
 
@@ -39,6 +39,7 @@
 
 
 		<!-- 接口服务 -->
+		<module>./service/service-job</module>
 		<module>./service/service-eam</module>
 		<module>./service/service-hrm</module>
 		<module>./service/service-datacenter</module>
