--- a/eam/wrapper/wrapper-all/src/main/resources/application.yml
+++ b/eam/wrapper/wrapper-all/src/main/resources/application.yml
@@ -95,6 +95,13 @@ foxnic:
     # 按顺序读取 profile 下的配置值，默认使用 default Profile 的配置值，如果位于靠前的 profile 已经有配置，则不再往后读取，即前面 profile 的覆盖后面的 profile ;
     profiles: empty,profile@GuoYIE
   # 设置 Join 的二级缓存
+  job:
+    # 指定 Quartz 使用的DAO数据源
+    dao-bean-name: primaryDAO
+    # 容许的最大作业延长时间，超出则认为 misfire 发生，单位毫秒
+    misfire-threshold: 1000
+    # 日志保留天数
+    log-keep-days: 7
   cache:
     # 默认配置
     default:
