完善功能,报废流程

--- a/eam/service/service-job/pom.xml
+++ b/eam/service/service-job/pom.xml
@@ -36,6 +36,14 @@
             <artifactId>proxy</artifactId>
             <version>${platform.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
