完善功能,报废流程

--- a/eam/deploy/application_tmp.yml
+++ b/eam/deploy/application_tmp.yml
@@ -1,10 +1,10 @@
 server:
   session:
-    timeout: 12000s
+    timeout: 1200s
   servlet:
     session:
       # 会话超时时间，如 30s , 20m 等
-      timeout: 12000s
+      timeout: 1200s
   port: 8089
 
 spring:
@@ -85,24 +85,15 @@ spring:
       #session:
       #store-type: redis # 使用 redis 存储session
       #redis:
-      #port: 6379
+    #port: 6379
     #host: 127.0.0.1
 
 
 foxnic:
   config:
     # 按顺序读取 profile 下的配置值，默认使用 default Profile 的配置值，如果位于靠前的 profile 已经有配置，则不再往后读取，即前面 profile 的覆盖后面的 profile ;
-    profiles: empty,profile@GuoYIE
+    profiles: empty,default
   # 设置 Join 的二级缓存
-  job:
-    enable: false
-    force-run-job-ids:
-    # 指定 Quartz 使用的DAO数据源
-    dao-bean-name: primaryDAO
-    # 容许的最大作业延长时间，超出则认为 misfire 发生，单位毫秒
-    misfire-threshold: 1000
-    # 日志保留天数
-    log-keep-days: 7
   cache:
     # 默认配置
     default:
@@ -166,7 +157,7 @@ security:
   # 模式：session / jwt
   mode: both
   # 配置无需鉴权可以访问的地址
-  ignored-urls: /assets/** , /pages/** , /*.ico , /module/** ,  /**/*.css , /**/*.js , /error , /druid/**,/business/eam/user_book/**
+  ignored-urls: /assets/** , /pages/** , /*.ico , /module/** ,  /**/*.css , /**/*.js , /error , /druid/**
   # mode=session 时配置的登录页面
   login-page: /login.html
   jwt:
