--- a/eam/app.conf
+++ b/eam/app.conf
@@ -7,11 +7,11 @@ lankdeMacBook-Pro-2.local.ops_jar_dir=/Users/lank/IdeaProjectsnew/eam/eam
 
 
 ##---lank Mac M1X
-lankL.maven_dir=/Users/lank/.m2/repository
-lankL.jar_dir=/Users/lank/IdeaProjectsnew/eam/eam/wrapper/wrapper-all/target
-lankL.deploy_dir=/Users/lank/IdeaProjectsnew/eam/eam/deploy
-lankL.ops_dir=/Users/Shared/ops
-lankL.ops_jar_dir=/Users/lank/IdeaProjectsnew/eam/eam
+lankLdeMacBook-Pro.local.maven_dir=/Users/lankl/.m2/repository
+lankLdeMacBook-Pro.local.jar_dir=/Users/lankl/IdeaProjects/eam/eam/wrapper/wrapper-all/target
+lankLdeMacBook-Pro.local.deploy_dir=/Users/lankl/IdeaProjects/eam/eam/deploy
+lankLdeMacBook-Pro.local.ops_dir=/Users/Shared/ops
+lankLdeMacBook-Pro.local.ops_jar_dir=/Users/lankl/IdeaProjects/eam/eam
 
 
 
