--- a/eam/common/generator/src/main/resources/config.yml
+++ b/eam/common/generator/src/main/resources/config.yml
@@ -17,6 +17,7 @@ authors:
   B15BDA59450483F9: 李方捷 , leefangjie@qq.com
   B1894FFE47E36B09: 李方捷 , leefangjie@qq.com
   D7B67D75818C671B: 金杰 , maillank@qq.com
+  76C24FBF9BD15F8A: 金杰 , maillank@qq.com
 
 
 compoments: 
