--- a/eam/deploy/application_tmp.yml
+++ b/eam/deploy/application_tmp.yml
@@ -1,10 +1,10 @@
 server:
   session:
-    timeout: 1200s
+    timeout: 12000s
   servlet:
     session:
       # 会话超时时间，如 30s , 20m 等
-      timeout: 1200s
+      timeout: 12000s
   port: 8089
 
 spring:
@@ -85,22 +85,39 @@ spring:
       #session:
       #store-type: redis # 使用 redis 存储session
       #redis:
-    #port: 6379
+      #port: 6379
     #host: 127.0.0.1
 
 
 foxnic:
+  api:
+    log-enable: true
   config:
     # 按顺序读取 profile 下的配置值，默认使用 default Profile 的配置值，如果位于靠前的 profile 已经有配置，则不再往后读取，即前面 profile 的覆盖后面的 profile ;
-    profiles: empty,default
-  # 设置 Join 的二级缓存
+    profiles: empty,profile@GuoYIE
+  # 设置 API 接口
+  job:
+    enable: true
+    force-run-job-ids:
+    # 指定 Quartz 使用的DAO数据源
+    dao-bean-name: primaryDAO
+    # 容许的最大作业延长时间，超出则认为 misfire 发生，单位毫秒
+    misfire-threshold: 1000
+    # 日志保留天数
+    log-keep-days: 7
+  storage:
+    mode: disk
+    disk:
+      location:
+        #在不同的环境下选择不同的路径
+        windows: c:/uploads
+        mac: /opt/upload
+        linux: /opt/eam/upload
   cache:
     # 默认配置
     default:
       # local,remote,both,none
-      mode: none
-      # 是否为 join 使用缓存
-      cache-for-join: false
+      mode: both
       # 本地缓存配置 : 最大元素个数
       local-limit: 10240
       # 本地缓存配置 : 本地缓存超时时长；-1 表示用不过期
@@ -116,12 +133,12 @@ foxnic:
             cache-empty-result: true
             properties: code
       "org.github.foxnic.web.domain.oauth.Resourze":
-        mode: local
+        #mode: local
         local-limit: 10240
         local-expire: 1200000
         remote-expire: 1200000
       "org.github.foxnic.web.domain.system.DictItem":
-        mode: local
+        #mode: local
         local-limit: 10240
         local-expire: 1200000
         remote-expire: 1200000
@@ -131,7 +148,7 @@ foxnic:
             cache-empty-result: true
             properties: dictCode
       "org.github.foxnic.web.domain.system.DbCache":
-        mode: local
+        #mode: local
         local-limit: 10240
         local-expire: 1200000
         remote-expire: 1200000
@@ -141,7 +158,7 @@ foxnic:
             cache-empty-result: true
             properties: area,catalog,ownerType,ownerId
       "org.github.foxnic.web.domain.pcm.Catalog":
-        mode: local
+        #mode: local
         local-limit: 10240
         local-expire: 1200000
         remote-expire: 1200000
@@ -157,7 +174,7 @@ security:
   # 模式：session / jwt
   mode: both
   # 配置无需鉴权可以访问的地址
-  ignored-urls: /assets/** , /pages/** , /*.ico , /module/** ,  /**/*.css , /**/*.js , /error , /druid/**
+  ignored-urls: /assets/** , /pages/** , /*.ico , /module/** ,  /**/*.css , /**/*.js , /error , /druid/**,/business/eam/user_book/**
   # mode=session 时配置的登录页面
   login-page: /login.html
   jwt:
@@ -191,14 +208,7 @@ knife4j:
   description: ${spring.application.description}
   version: 1.0
 
-storage:
-  mode: disk
-  disk:
-    location:
-      #在不同的环境下选择不同的路径
-      windows: c:/uploads
-      mac: /opt/upload
-      linux: /opt/eam/upload
+
 
 develop:
   language: defaults
