--- a/eam/pom.xml
+++ b/eam/pom.xml
@@ -25,8 +25,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<knife4j.version>3.0.2</knife4j.version>
 		<platform.version>0.0.2.RELEASE</platform.version>
-		<foxnic.version>1.4.8.CACHE.RELEASE</foxnic.version>
-		<foxnic-web.version>0.8.0.CACHE.RELEASE</foxnic-web.version>
+		<foxnic.version>1.5.0.RELEASE</foxnic.version>
+		<foxnic-web.version>1.0.0.RELEASE</foxnic-web.version>
 		<mysql.version>8.0.27</mysql.version>
 	</properties>
 
