--- a/eam/deploy/bin/app.conf
+++ b/eam/deploy/bin/app.conf
@@ -1,12 +1,11 @@
 #!/bin/sh
 # App.conf
 ###############################################################
-
 JAVA=java
 APP_NAME=eam.jar
 
-APP_DIR=/home/eam/eam
-BACKUP_DIR=/home/eam/eam/backup
+APP_DIR=/opt/eam
+BACKUP_DIR=/opt/eam/backup
 DATA_CLEAR=1
 
 ######APP MYSQL
