--- a/eam/wrapper/wrapper-all/src/main/resources/application.yml
+++ b/eam/wrapper/wrapper-all/src/main/resources/application.yml
@@ -93,6 +93,7 @@ spring:
 
 
 foxnic:
+  licence: D:/leefj/workspace/git-base/foxnic-grant/licence/community/licence
   api:
     log-enable: true
   config:
