--- a/eam/wrapper/wrapper-all/pom.xml
+++ b/eam/wrapper/wrapper-all/pom.xml
@@ -145,6 +145,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.dt.platform</groupId>
+			<artifactId>service-vehicle</artifactId>
+			<version>${platform.version}</version>
+		</dependency>
+
 
 
 		<dependency>
@@ -200,6 +206,12 @@
 		<dependency>
 			<groupId>com.dt.platform</groupId>
 			<artifactId>view-knowledgebase</artifactId>
+			<version>${platform.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.dt.platform</groupId>
+			<artifactId>view-vehicle</artifactId>
 			<version>${platform.version}</version>
 		</dependency>
 
