--- a/eam/deploy/bin/app.conf
+++ b/eam/deploy/bin/app.conf
@@ -1,11 +1,16 @@
 #!/bin/sh
 # App.conf
 ###############################################################
-JAVA=java
-APP_NAME=eam.jar
 
+######APP MYSQL
+#java 路径
+JAVA=java
+APP_UID=app
+APP_NAME=app.jar
 APP_DIR=/opt/eam
 BACKUP_DIR=/opt/eam/backup
+
+######OPS
 DATA_CLEAR=1
 
 ######APP MYSQL
@@ -17,12 +22,5 @@ DB_PORT=3306
 DB_NAME=eam
 DB_USER=eam
 DB_PWD=xxxxxx
-
-
-
-
-
-
-
 
 
