--- a/eam/service/service-job/pom.xml
+++ b/eam/service/service-job/pom.xml
@@ -31,19 +31,19 @@
             <artifactId>domain</artifactId>
             <version>${platform.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.dt.platform</groupId>
             <artifactId>proxy</artifactId>
             <version>${platform.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-        </dependency>
+
 
     </dependencies>
     <build>
