--- a/eam/deploy/bin/app.conf
+++ b/eam/deploy/bin/app.conf
@@ -2,13 +2,14 @@
 # App.conf
 ###############################################################
 
-######APP MYSQL
+######APP
 #java 路径
 JAVA=java
 APP_UID=app
 APP_NAME=app.jar
 APP_DIR=/opt/eam
 BACKUP_DIR=/opt/eam/backup
+APP_WEB_PORT=8089
 
 ######OPS
 DATA_CLEAR=1
