--- a/eam/pom.xml
+++ b/eam/pom.xml
@@ -124,7 +124,7 @@
 		<repository>
 			<id>releases</id>
 			<name>Releases</name>
-			<url>http://47.92.240.43:9091/repository/maven-releases/</url>
+			<url>http://foxnicweb.com:9091/repository/maven-releases/</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
@@ -137,7 +137,7 @@
 		<repository>
 			<id>snapshots</id>
 			<name>Snapshots</name>
-			<url>http://47.92.240.43:9091/repository/maven-snapshots/</url>
+			<url>http://foxnicweb.com:9091/repository/maven-snapshots/</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
@@ -152,7 +152,7 @@
 		<pluginRepository>
 			<id>releases</id>
 			<name>Releases</name>
-			<url>http://47.92.240.43:9091/repository/maven-releases/</url>
+			<url>http://foxnicweb.com:9091/repository/maven-releases/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
