--- a/eam/service/service-eam/pom.xml
+++ b/eam/service/service-eam/pom.xml
@@ -21,6 +21,20 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.30</version>
+        </dependency>
+        <!-- itext7 全家桶 -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.2.2</version>
+            <type>pom</type>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.dt.platform</groupId>
             <artifactId>framework</artifactId>
             <version>${platform.version}</version>
