--- a/eam/service/service-eam/pom.xml
+++ b/eam/service/service-eam/pom.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
-    <modelVersion>4.0.0</modelVersion>  
-    <parent> 
-    	<groupId>com.dt.platform</groupId>  
-    	<artifactId>parent</artifactId> 
-        <version>0.0.2.RELEASE</version>  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dt.platform</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.2.RELEASE</version>
         <relativePath>../../pom.xml</relativePath>
-        <!-- lookup parent from repository --> 
-    </parent>  
-    <artifactId>service-eam</artifactId>  
-    <name>service-eam</name>  
-    <description>Service EAM</description>  
-    <properties> 
-        <skipTests>true</skipTests>  
-        <java.version>1.8</java.version>  
-        <maven.compiler.source>1.8</maven.compiler.source>  
-        <maven.compiler.target>1.8</maven.compiler.target>  
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> 
+        <!-- lookup parent from repository -->
+    </parent>
+    <artifactId>service-eam</artifactId>
+    <name>service-eam</name>
+    <description>Service EAM</description>
+    <properties>
+        <skipTests>true</skipTests>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>com.taobao.arthas</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.80-fix</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
@@ -48,14 +56,14 @@
 
 
         <dependency>
-            <groupId>com.dt.platform</groupId>  
-            <artifactId>domain</artifactId>  
-            <version>${platform.version}</version> 
-        </dependency>  
-        <dependency> 
-            <groupId>com.dt.platform</groupId>  
-            <artifactId>proxy</artifactId>  
-            <version>${platform.version}</version> 
+            <groupId>com.dt.platform</groupId>
+            <artifactId>domain</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dt.platform</groupId>
+            <artifactId>proxy</artifactId>
+            <version>${platform.version}</version>
         </dependency>
         <dependency>
             <groupId>com.dt.platform</groupId>
@@ -102,6 +110,9 @@
             <artifactId>easypoi-base</artifactId>
             <version>4.4.0</version>
         </dependency>
+
+
+
 
 
     </dependencies>
